--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,4 +1,7 @@
+
+
 <div>
+    <h2>List of Students</h2>
     <li *ngFor = "let student of studentDetails">
             <span> {{student.id}} </span>
     </li>                
