--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -2,7 +2,8 @@
 
 <div>
     <h2>List of Students</h2>
-    <li *ngFor = "let student of studentDetails">
+    <li *ngFor = "let student of studentDetails"
+         >
             <span> {{student.id}} </span>
     </li>                
 </div>
