Student details view

--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -9,7 +9,7 @@
    </span>
    <br><br><br>
    <span *ngIf = "selectedTeacher" >
-     <div style="background:brown; width:170px; height:150px; border-radius:15px">
+     <div class="detailsView">
         <app-teacher-details [teacher] = "selectedTeacher" ></app-teacher-details>
      </div>
     
