--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,9 +1,11 @@
 
 
-<div>
+<span>
     <h2>List of Students</h2>
-    <li *ngFor = "let student of studentDetails"
-         >
-            <span> {{student.id}} </span>
+    <li *ngFor = "let student of studentDetails">
+            <span (click) = "studentDisplay(student)" > {{student.id}} </span>
     </li>                
-</div>
+  </span><br><br>
+  <span *ngIf = "selectedStudent" class="detailsView">
+    <app-student-details [student]="selectedStudent" ></app-student-details>
+  </span>
