Test routing works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<nav>
+        <a routerLink = "/aboutus" >About us</a>
+</nav>
 
 <div class="row">
 <div class="col-sm-4">
@@ -15,4 +18,5 @@
         </div>
 </div>
 </div>
+<router-outlet></router-outlet>
 
