--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -1,3 +1,6 @@
 <span>
-  {{student.name}}
+  <h2> {{student.name}}</h2>
+  Name: {{student.name}}<br>
+  Class: {{student.std}}<br>
+  Division: {{student.div}}
 </span>
